--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gh-badges",
   "version": "1.3.0",
-  "description": "Official Shields.io badge libraryx.",
+  "description": "Official Shields.io badge library.",
   "keywords": ["GitHub", "badge", "SVG", "image", "shields.io"],
   "homepage": "http://shields.io",
   "bugs": {
