--- a/package.json
+++ b/package.json
@@ -57,9 +57,11 @@
     "coverage:test:js": "nyc node_modules/mocha/bin/_mocha \"*.spec.js\" \"lib/**/*.spec.js\" \"services/**/*.spec.js\"",
     "coverage:test:services": "nyc node_modules/mocha/bin/_mocha --delay lib/service-test-runner/cli.js",
     "coverage:test": "rimraf .nyc_output coverage; npm run coverage:test:js; npm run coverage:test:services",
-    "coverage:report": "nyc report", "coverage:report:reopen": "opn coverage/lcov-report/index.html",
+    "coverage:report": "nyc report",
+    "coverage:report:reopen": "opn coverage/lcov-report/index.html",
     "coverage:report:open": "npm run coverage:report && npm run coverage:report:reopen",
-    "lint": "eslint \"**/*.js\"", "danger": "danger",
+    "lint": "eslint \"**/*.js\"",
+    "danger": "danger",
     "test:js:frontend": "NODE_ENV=mocha mocha --require babel-polyfill --require babel-register \"frontend/**/*.spec.js\"",
     "test:js:server": "HANDLE_INTERNAL_ERRORS=false mocha \"*.spec.js\" \"lib/**/*.spec.js\" \"services/**/*.spec.js\"",
     "test:services": "HANDLE_INTERNAL_ERRORS=false mocha --delay lib/service-test-runner/cli.js",
@@ -155,18 +157,27 @@
     "url": "^0.11.0"
   },
   "greenkeeper": {
-    "ignore": ["joi", "redis"]
+    "ignore": [
+      "joi",
+      "redis"
+    ]
   },
   "engines": {
     "node": ">= 8.x",
     "npm": "5.x"
   },
   "babel": {
-    "presets": ["next/babel"],
-    "plugins": ["transform-class-properties"],
+    "presets": [
+      "next/babel"
+    ],
+    "plugins": [
+      "transform-class-properties"
+    ],
     "env": {
       "mocha": {
-        "presets": ["env"]
+        "presets": [
+          "env"
+        ]
       }
     }
   },
