--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "priorityqueuejs": "^1.0.0",
     "query-string": "^6.0.0",
     "raven": "^2.4.2",
+    "react-router-dom": "^4.3.1",
     "redis": "~2.6.2",
     "request": "~2.87.0",
     "semver": "~5.5.0",
