--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redis": "~2.6.2",
     "request": "~2.87.0",
     "semver": "~5.5.0",
+    "simple-icons": "^1.6.7",
     "svgo": "~1.0.5",
     "xml2js": "~0.4.16",
     "xmldom": "~0.1.27",
