--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
     "fetch-ponyfill": "^6.0.0",
+    "fs-readfile-promise": "^3.0.1",
     "icedfrisby": "2.0.0-alpha.2",
     "icedfrisby-nock": "^1.0.0",
     "is-png": "^1.1.0",
