--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -27,3 +27,4 @@ rules:
   no-trailing-spaces: "error"
   eol-last: "error"
   object-curly-spacing: ["error", "always"]
+  comma-dangle: ["error", "always-multiline"]
