--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "dejavu-fonts-ttf": "^2.37.3",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^2.6.0",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-standard": "^12.0.0-alpha.0",
     "eslint-config-standard-jsx": "^5.0.0",
     "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
